--- a/css/ScrollToTOP.css
+++ b/css/ScrollToTOP.css
@@ -1,5 +1,5 @@
 .scrollup {
-    background: url("img/icon_gototop.png") no-repeat scroll 0 0 transparent;
+    background: url("../img/icon_gototop.png") no-repeat scroll 0 0 transparent;
     bottom: 20px;
     display: none;
     height: 40px;
